name:                nested-functors
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/oisdk/nested-functors#readme
license:             MIT
license-file:        LICENSE
author:              Donnacha Oisín Kidney
maintainer:          mail@doisinkidney.com
copyright:           2016 Donnacha Oisín Kidney
category:            Data
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Functor.Nested
  build-depends:       base >= 4.7 && < 5
                     , semiring-num >= 0.6
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror

test-suite nested-functors-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , nested-functors
                     , QuickCheck >= 2.8
                     , doctest >= 0.11
                     , semiring-num >= 0.6
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/oisdk/nested-functors
